--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
    <head>
         <title> About Abhishek</title>
   </head>
+   <link rel ="stylesheet" href="mystyle.css">
+
 <body>
         <h1> Welcome to Abhishek Website</h1>
         <h2>My Skills</h2>
